# talk-to-me

./: .pre-commit-config.yaml  Makefile  Pipfile  pyproject.toml
talk_to_me/: main.py
talk_to_me/common/: models.py
