[tool.poetry]
name = "talk-to-me"
version = "0.1.0"
description = ""
authors = ["DiZas <dzasl@softserveinc.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
pytest = "^6.2.4"
SQLAlchemy = {extras = ["postges"], version = "^1.4.22"}
ulid = "^1.1"
stringcase = "^1.2.0"
pre-commit = "^2.14.0"
black = "^21.7b0"
pylint = "^2.9.6"
isort = "^5.9.3"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
